--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -13,7 +13,7 @@
     "software"
   ],
   "homepage": "https://www.wappalyzer.com/",
-  "version": "6.3.6",
+  "version": "6.3.8",
   "author": "Wappalyzer",
   "license": "MIT",
   "repository": {
@@ -40,6 +40,12 @@
     "wappalyzer": "./cli.js"
   },
   "dependencies": {
-    "puppeteer": "^5.3.0"
+    "async-request": "^1.2.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "mongoose": "^5.10.9",
+    "nodemon": "^2.0.6",
+    "puppeteer": "^5.3.1",
+    "request": "^2.88.2"
   }
 }
