--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -41,10 +41,13 @@
   },
   "dependencies": {
     "async-request": "^1.2.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.5",
     "chromium": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html-format": "^1.0.1",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.6",
     "puppeteer": "^5.3.1",
