--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -52,6 +52,7 @@
     "nodemon": "^2.0.6",
     "puppeteer": "^5.3.1",
     "request": "^2.88.2",
+    "uuid": "^3.4.0",
     "wappalyzer": "^6.5.26"
   }
 }
