--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@prantlf/jsonlint": "^10.2.0",
     "adm-zip": "^0.4.16",
-    "convert-svg-to-png": "^0.5.0"
+    "convert-svg-to-png": "^0.5.0",
+    "react-toast": "^1.0.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
