--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -45,6 +45,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
     "chromium": "^3.0.2",
+    "config": "3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-format": "^1.0.1",
