--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -50,6 +50,7 @@
     "express": "^4.17.1",
     "html-format": "^1.0.1",
     "mongoose": "^5.10.9",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "puppeteer": "^9.1.1",
     "request": "^2.88.2",
