--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -52,6 +52,7 @@
     "mongoose": "^5.10.9",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
+    "on-finished": "^2.3.0",
     "puppeteer": "^10.0.0",
     "request": "^2.88.2",
     "uuid": "^3.4.0",
