--- a/src/drivers/npm/package.json
+++ b/src/drivers/npm/package.json
@@ -55,6 +55,7 @@
     "on-finished": "^2.3.0",
     "puppeteer": "^10.0.0",
     "request": "^2.88.2",
+    "socket.io": "^4.1.2",
     "uuid": "^3.4.0",
     "wappalyzer": "^6.5.26"
   }
